--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "alexamarket",
+  "name": "save",
   "private": true,
   "version": "0.0.0",
   "type": "module",
@@ -20,6 +20,7 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-i18next": "^15.0.2",
+    "react-icons": "^5.3.0",
     "react-router-dom": "^6.26.2",
     "styled-components": "^6.1.13",
     "zustand": "^5.0.0-rc.2"
