--- a/.env
+++ b/.env
@@ -1,3 +1,2 @@
-# VITE_BASE_URL="https://mysaveapi.savesolutions.com.br/api/v1/"
-VITE_BASE_URL="http://localhost:8080"
+VITE_BASE_URL="https://mysaveapi.savesolutions.com.br/api/v1/"
 VITE_PRODUCT_KEY="91ee2b95-e193-4d95-b3a3-657431d99585" 
